--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "express": "^4.13.4",
     "jquery": "^2.2.4",
     "mongoose": "^4.4.17",
+    "pg": "4.5.6",
+    "pg-hstore": "2.3.2",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-router": "^2.4.1",
+    "sequelize": "3.23.3",
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
     "webpack": "^1.13.1"
