--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "es6",
         "module": "commonjs",
-        "moduleResolution": "node",
         "noImplicitAny": false,
         "removeComments": true,
         "preserveConstEnums": true,
@@ -16,15 +15,29 @@
         "!./node_modules/**/*.ts"
     ],
     "files": [
+        "./server/constants.ts",
+        "./server/models/db.ts",
+        "./server/models/users.ts",
+        "./typings/globals/bluebird/index.d.ts",
+        "./typings/globals/body-parser/index.d.ts",
+        "./typings/globals/express-serve-static-core/index.d.ts",
+        "./typings/globals/express/index.d.ts",
         "./typings/globals/jquery/index.d.ts",
+        "./typings/globals/lodash/index.d.ts",
+        "./typings/globals/mime/index.d.ts",
+        "./typings/globals/node/index.d.ts",
         "./typings/globals/react-dom/index.d.ts",
         "./typings/globals/react/index.d.ts",
+        "./typings/globals/sequelize-fixtures/index.d.ts",
+        "./typings/globals/sequelize/index.d.ts",
+        "./typings/globals/serve-static/index.d.ts",
+        "./typings/globals/validator/index.d.ts",
         "./typings/index.d.ts",
-        "./typings/modules/lodash/index.d.ts",
         "./typings/modules/react-router/index.d.ts",
         "./client/app.tsx",
         "./client/components/hello.tsx",
-        "./client/components/helloAgain.tsx"
+        "./client/components/helloAgain.tsx",
+        "./server/app.tsx"
     ],
     "compileOnSave": false,
     "atom": {
