--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "jquery": "^2.2.4",
+    "markdown-loader": "0.1.7",
     "mongoose": "^4.4.17",
+    "mysql": "2.11.0",
     "pg": "4.5.6",
     "pg-hstore": "2.3.2",
+    "pg-native": "1.10.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-router": "^2.4.1",
