--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "ReactExpressTemplate",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "Gamify-Education",
+  "version": "0.0.1",
+  "description": "Thesis Project",
+  "main": "./www/app.bundle.js",
   "scripts": {
-    "start": "concurrently \"npm run client-build-watch\" \"npm run server-build-watch\" \"nodemon www/app.bundle.js\"",
-    "client-build": "webpack --progress --colors --config webpack.config.client.js",
-    "client-butil-watch": "webpack --progress --colors --config webpack.config.client.js --watch",
-    "server-build": "webpack --progress --colors --config webpack.config.server.js",
-    "server-build-watch": "webpack --progress --colors --config webpack.config.server.js --watch"
+    "start": "npm run build && node ./www/app.bundle.js",
+    "start:watch": "concurrently \"npm run watch:client\" \"npm run watch:server\" \"npm run watch:build\"",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "webpack --colors --config webpack.config.client.js",
+    "watch:client": "webpack --colors --config webpack.config.client.js --watch",
+    "build:server": "webpack --colors --config webpack.config.server.js",
+    "watch:server": "webpack --colors --config webpack.config.server.js --watch",
+    "watch:build": "nodemon ./www/app.bundle.js"
   },
-  "author": "",
+  "author": "Luis E. Rojas <lrojas94@gmail.com>, Manuel E. Urena, Frankie Garabito",
   "license": "ISC",
   "dependencies": {
     "bluebird": "3.4.0",
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "jquery": "^2.2.4",
+    "json-loader": "0.5.4",
     "markdown-loader": "0.1.7",
-    "mongoose": "^4.4.17",
     "mysql": "2.11.0",
     "pg": "4.5.6",
     "pg-hstore": "2.3.2",
@@ -27,11 +30,11 @@
     "react-dom": "^15.0.2",
     "react-router": "^2.4.1",
     "sequelize": "3.23.3",
+    "serve-static": "1.10.3",
     "ts-loader": "^0.8.2",
-    "typescript": "^1.8.10",
     "webpack": "^1.13.1"
   },
   "devDependencies": {
-    "json-loader": "0.5.4"
+    "pg-hstore": "2.3.2"
   }
 }
