--- a/package.json
+++ b/package.json
@@ -2,30 +2,26 @@
   "name": "Gamify-Education",
   "version": "0.0.1",
   "description": "Thesis Project",
-  "main": "./www/app.bundle.js",
+  "main": "./www/app.js",
   "scripts": {
-    "start": "npm run build && node ./www/app.bundle.js",
+    "start": "npm run build && node ./www/app.js",
     "start:watch": "concurrently \"npm run watch:client\" \"npm run watch:server\" \"npm run watch:build\"",
     "build": "npm run build:client && npm run build:server",
     "build:client": "webpack --colors --config webpack.config.client.js",
     "watch:client": "webpack --colors --config webpack.config.client.js --watch",
-    "build:server": "webpack --colors --config webpack.config.server.js",
-    "watch:server": "webpack --colors --config webpack.config.server.js --watch",
-    "watch:build": "nodemon ./www/app.bundle.js"
+    "build:server": "tsc ./server/app.ts --outDir ./www/",
+    "watch:server": "tsc ./server/app.ts --outDir ./www/ --watch",
+    "watch:build": "nodemon ./www/app.js"
   },
   "author": "Luis E. Rojas <lrojas94@gmail.com>, Manuel E. Urena, Frankie Garabito",
   "license": "ISC",
   "dependencies": {
-    "bluebird": "3.4.0",
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "jquery": "^2.2.4",
-    "json-loader": "0.5.4",
-    "markdown-loader": "0.1.7",
     "mysql": "2.11.0",
     "pg": "4.5.6",
     "pg-hstore": "2.3.2",
-    "pg-native": "1.10.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-router": "^2.4.1",
@@ -33,8 +29,5 @@
     "serve-static": "1.10.3",
     "ts-loader": "^0.8.2",
     "webpack": "^1.13.1"
-  },
-  "devDependencies": {
-    "pg-hstore": "2.3.2"
   }
 }
