--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,16 +17,24 @@
     "files": [
         "./server/app.ts",
         "./server/constants.ts",
+        "./server/messages.ts",
         "./server/models/db.ts",
+        "./server/models/person.ts",
         "./server/models/users.ts",
+        "./server/tests/db/person.ts",
+        "./server/tests/tests.ts",
         "./typings/globals/bluebird/index.d.ts",
         "./typings/globals/body-parser/index.d.ts",
+        "./typings/globals/chai-as-promised/index.d.ts",
+        "./typings/globals/chai/index.d.ts",
         "./typings/globals/express-serve-static-core/index.d.ts",
         "./typings/globals/express/index.d.ts",
         "./typings/globals/jquery/index.d.ts",
         "./typings/globals/lodash/index.d.ts",
         "./typings/globals/mime/index.d.ts",
+        "./typings/globals/mocha/index.d.ts",
         "./typings/globals/node/index.d.ts",
+        "./typings/globals/promises-a-plus/index.d.ts",
         "./typings/globals/react-dom/index.d.ts",
         "./typings/globals/react/index.d.ts",
         "./typings/globals/sequelize-fixtures/index.d.ts",
