Add authentication with Auth0
Done:

* Added dependencies to use jwt with TypeScript
* Modified Server side App file to check the jwt
* Modified constants to add Auth0 api keys
* Added cdn on index.html to import auth0

To Do:

* Implement Auth0 authentication on client side

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,12 @@
     "files": [
         "./server/app.ts",
         "./server/constants.ts",
+        "./server/models/authentication.ts",
         "./server/models/db.ts",
         "./server/models/users.ts",
         "./typings/globals/bluebird/index.d.ts",
         "./typings/globals/body-parser/index.d.ts",
+        "./typings/globals/express-jwt/index.d.ts",
         "./typings/globals/express-serve-static-core/index.d.ts",
         "./typings/globals/express/index.d.ts",
         "./typings/globals/jquery/index.d.ts",
