--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
+    "express-jwt": "^3.4.0",
     "jquery": "^2.2.4",
     "pg": "4.5.6",
     "pg-hstore": "2.3.2",
