--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,9 @@
         "./typings/globals/mime/index.d.ts",
         "./typings/globals/mocha/index.d.ts",
         "./typings/globals/node/index.d.ts",
+        "./typings/globals/passport-jwt/index.d.ts",
+        "./typings/globals/passport-strategy/index.d.ts",
+        "./typings/globals/passport/index.d.ts",
         "./typings/globals/promises-a-plus/index.d.ts",
         "./typings/globals/react-dom/index.d.ts",
         "./typings/globals/react/index.d.ts",
