Implement flux architecture
Done:

* Added new depencies to implement the Flux Architecture
* Made new directories and class
* Added new Header Component to show the header of the page
* Removed Auth0 dependency

To Do:

* Implement login methods

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,15 +15,22 @@
         "!./node_modules/**/*.ts"
     ],
     "files": [
+        "./client/actions/AuthActions.ts",
+        "./client/constants/AuthConstants.ts",
+        "./client/constants/Constants.ts",
+        "./client/dispatcher/AppDispatcher.ts",
+        "./client/stores/AuthStore.ts",
         "./server/app.ts",
         "./server/constants.ts",
         "./server/models/db.ts",
         "./server/models/users.ts",
         "./typings/globals/bluebird/index.d.ts",
         "./typings/globals/body-parser/index.d.ts",
+        "./typings/globals/cors/index.d.ts",
         "./typings/globals/express-jwt/index.d.ts",
         "./typings/globals/express-serve-static-core/index.d.ts",
         "./typings/globals/express/index.d.ts",
+        "./typings/globals/flux/index.d.ts",
         "./typings/globals/jquery/index.d.ts",
         "./typings/globals/lodash/index.d.ts",
         "./typings/globals/mime/index.d.ts",
@@ -33,10 +40,12 @@
         "./typings/globals/sequelize-fixtures/index.d.ts",
         "./typings/globals/sequelize/index.d.ts",
         "./typings/globals/serve-static/index.d.ts",
+        "./typings/globals/superagent/index.d.ts",
         "./typings/globals/validator/index.d.ts",
         "./typings/index.d.ts",
         "./typings/modules/react-router/index.d.ts",
         "./client/app.tsx",
+        "./client/components/Header.tsx",
         "./client/components/hello.tsx",
         "./client/components/helloAgain.tsx"
     ],
