--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.1",
+    "cors": "^2.7.1",
     "express": "^4.13.4",
     "express-jwt": "^3.4.0",
+    "flux": "^2.1.1",
     "jquery": "^2.2.4",
+    "keymirror": "^0.1.1",
     "pg": "4.5.6",
     "pg-hstore": "2.3.2",
     "react": "^15.0.2",
@@ -28,6 +31,7 @@
     "react-router": "^2.4.1",
     "sequelize": "3.23.3",
     "serve-static": "1.10.3",
+    "superagent": "^2.0.0",
     "ts-loader": "^0.8.2",
     "webpack": "^1.13.1"
   },
