Improved build size for a production environment.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "npm run build && node ./www/app.js",
     "start:watch": "concurrently \"npm run watch:client\" \"npm run watch:server\" \"npm run watch:build\"",
     "build": "npm run build:client && npm run build:server",
-    "build:client": "webpack --colors --config webpack.config.client.js --optimize-dedupe",
-    "watch:client": "webpack --colors --config webpack.config.client.js --watch",
+    "build:client": "webpack --colors --config webpack.config.client.production.js",
+    "watch:client": "webpack --colors --config webpack.config.client.dev.js --watch",
     "build:server": "tsc ./server/app.ts --outDir ./www/",
     "watch:server": "tsc ./server/app.ts --outDir ./www/ --watch",
     "watch:build": "nodemon ./www/app.js",
