--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
     "compilerOptions": {
-        "target": "es6",
         "module": "commonjs",
         "noImplicitAny": false,
         "removeComments": true,
         "preserveConstEnums": true,
-        "sourceMap": true,
+        "sourceMap": false,
         "allowSyntheticDefaultImports": true,
         "jsx": "react"
     },
@@ -30,6 +29,7 @@
         "./typings/globals/express-serve-static-core/index.d.ts",
         "./typings/globals/express/index.d.ts",
         "./typings/globals/jquery/index.d.ts",
+        "./typings/globals/jsonwebtoken/index.d.ts",
         "./typings/globals/lodash/index.d.ts",
         "./typings/globals/mime/index.d.ts",
         "./typings/globals/mocha/index.d.ts",
