Implemented Teachers Model * removed users.ts * Created Teacher's Tests * Improved Person's Tests.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,9 @@
         "./server/messages.ts",
         "./server/models/db.ts",
         "./server/models/person.ts",
-        "./server/models/users.ts",
+        "./server/models/teacher.ts",
         "./server/tests/db/person.ts",
+        "./server/tests/db/teacher.ts",
         "./server/tests/tests.ts",
         "./typings/globals/bluebird/index.d.ts",
         "./typings/globals/body-parser/index.d.ts",
