--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Thesis Project",
   "main": "./www/app.js",
   "scripts": {
-    "prestart": "npm install && bower install && typings install",
-    "start": "npm run build && node ./www/app.js",
+    "postinstall": "bower install && typings install && npm run build",
+    "start": "node ./www/app.js",
     "start:watch": "concurrently \"npm run watch:client\" \"npm run watch:server\" \"npm run watch:build\"",
     "build": "npm run build:client && npm run build:server",
     "build:client": "webpack --colors --config webpack.config.client.production.js",
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.1",
+    "bower": "1.7.9",
     "express": "^4.13.4",
     "jquery": "^2.2.4",
     "jsonwebtoken": "7.0.1",
@@ -33,13 +34,16 @@
     "sequelize": "3.23.3",
     "serve-static": "1.10.3",
     "ts-loader": "^0.8.2",
-    "webpack": "^1.13.1"
+    "tslint": "3.11.0",
+    "typescript": "1.8.10",
+    "typings": "1.3.0",
+    "webpack": "1.13.1"
   },
   "devDependencies": {
     "chai": "3.5.0",
-    "chai-as-promised": "5.3.0",
-    "tslint": "3.10.2",
-    "tslint-loader": "2.1.4",
-    "typescript": "1.8.10"
+    "nodemon": "1.9.2",
+    "mocha": "2.5.3",
+    "concurrently": "2.1.0",
+    "chai-as-promised": "5.3.0"
   }
 }
