--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
   },
   "devDependencies": {
     "chai": "3.5.0",
-    "nodemon": "1.9.2",
-    "mocha": "2.5.3",
+    "chai-as-promised": "5.3.0",
     "concurrently": "2.1.0",
-    "tslint": "3.11.0",
-    "chai-as-promised": "5.3.0"
+    "gulp": "3.9.1",
+    "gulp-inject": "4.1.0",
+    "mocha": "2.5.3",
+    "nodemon": "1.9.2",
+    "tslint": "3.11.0"
   }
 }
