Add new student entity
Done:

* Added new classes to declare a student entity
* Modified db.ts to add the Student class
* Added test for student table
* Tested that students were correctly created
* Modified test for teacher
* Create the Person entries on student test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,10 @@
         "./server/messages.ts",
         "./server/models/db.ts",
         "./server/models/person.ts",
+        "./server/models/student.ts",
         "./server/models/teacher.ts",
         "./server/tests/db/person.ts",
+        "./server/tests/db/student.ts",
         "./server/tests/db/teacher.ts",
         "./server/tests/tests.ts",
         "./typings/globals/axios/index.d.ts",
@@ -29,6 +31,7 @@
         "./typings/globals/body-parser/index.d.ts",
         "./typings/globals/chai-as-promised/index.d.ts",
         "./typings/globals/chai/index.d.ts",
+        "./typings/globals/cors/index.d.ts",
         "./typings/globals/express-serve-static-core/index.d.ts",
         "./typings/globals/express/index.d.ts",
         "./typings/globals/history/index.d.ts",
@@ -53,6 +56,7 @@
         "./typings/globals/sequelize-fixtures/index.d.ts",
         "./typings/globals/sequelize/index.d.ts",
         "./typings/globals/serve-static/index.d.ts",
+        "./typings/globals/superagent/index.d.ts",
         "./typings/globals/validator/index.d.ts",
         "./typings/index.d.ts",
         "./client/actions/session.tsx",
