Initial Redux Implementation
* Added customTypings like react-thunk-fsa (which can't be found in DT or any other repo)
* Created a login button which, by default, sends lrojas and rojass as username and password.
* Created AppModule variable which is a Redux connected React-Component.

TODO:
* Create an App.tsx module file which EXPORTS a Redux connected React-Component -> [IMPORTANT]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "!./node_modules/**/*.ts"
     ],
     "files": [
+        "./customTypings/redux-thunk-fsa/index.d.ts",
         "./server/app.ts",
         "./server/constants.ts",
         "./server/messages.ts",
@@ -23,12 +24,14 @@
         "./server/tests/db/person.ts",
         "./server/tests/db/teacher.ts",
         "./server/tests/tests.ts",
+        "./typings/globals/axios/index.d.ts",
         "./typings/globals/bluebird/index.d.ts",
         "./typings/globals/body-parser/index.d.ts",
         "./typings/globals/chai-as-promised/index.d.ts",
         "./typings/globals/chai/index.d.ts",
         "./typings/globals/express-serve-static-core/index.d.ts",
         "./typings/globals/express/index.d.ts",
+        "./typings/globals/history/index.d.ts",
         "./typings/globals/jquery/index.d.ts",
         "./typings/globals/jsonwebtoken/index.d.ts",
         "./typings/globals/lodash/index.d.ts",
@@ -40,19 +43,29 @@
         "./typings/globals/passport/index.d.ts",
         "./typings/globals/promises-a-plus/index.d.ts",
         "./typings/globals/react-dom/index.d.ts",
+        "./typings/globals/react-redux/index.d.ts",
+        "./typings/globals/react-router-redux/index.d.ts",
+        "./typings/globals/react-router/history/index.d.ts",
+        "./typings/globals/react-router/index.d.ts",
         "./typings/globals/react/index.d.ts",
+        "./typings/globals/redux-actions/index.d.ts",
+        "./typings/globals/redux/index.d.ts",
         "./typings/globals/sequelize-fixtures/index.d.ts",
         "./typings/globals/sequelize/index.d.ts",
         "./typings/globals/serve-static/index.d.ts",
         "./typings/globals/validator/index.d.ts",
         "./typings/index.d.ts",
-        "./typings/modules/react-router/index.d.ts",
+        "./client/actions/session.tsx",
         "./client/app.tsx",
         "./client/components/core/header.tsx",
+        "./client/components/core/index.tsx",
         "./client/components/core/sidenav.tsx",
         "./client/components/dashboard/dashboard.tsx",
-        "./client/components/hello.tsx",
-        "./client/components/helloAgain.tsx"
+        "./client/components/dashboard/index.tsx",
+        "./client/constants.tsx",
+        "./client/models/session.tsx",
+        "./client/reducers/index.tsx",
+        "./client/reducers/session.tsx"
     ],
     "compileOnSave": false,
     "atom": {
