--- a/package.json
+++ b/package.json
@@ -19,21 +19,29 @@
   "author": "Luis E. Rojas <lrojas94@gmail.com>, Manuel E. Urena, Frankie Garabito",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.1",
+    "axios": "0.12.0",
+    "body-parser": "1.15.1",
     "bower": "1.7.9",
-    "express": "^4.13.4",
-    "jquery": "^2.2.4",
+    "express": "4.13.4",
+    "jquery": "2.2.4",
+    "json-loader": "0.5.4",
     "jsonwebtoken": "7.0.1",
+    "node-fetch": "1.5.3",
     "passport": "0.3.2",
     "passport-jwt": "2.0.0",
     "pg": "4.5.6",
     "pg-hstore": "2.3.2",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
-    "react-router": "^2.4.1",
+    "react-redux": "4.4.5",
+    "react-router": "2.4.1",
+    "react-router-redux": "4.0.5",
+    "redux": "3.5.2",
+    "redux-actions": "0.10.0",
+    "redux-thunk-fsa": "3.0.2",
     "sequelize": "3.23.3",
     "serve-static": "1.10.3",
-    "ts-loader": "^0.8.2",
+    "ts-loader": "0.8.2",
     "typescript": "1.8.10",
     "typings": "1.3.0",
     "webpack": "1.13.1"
