Update server methods
Done:

* Added a new file to control api router
* Added new route to authenticate clients
* Added new route to query all students in database
* Modified constants to add new interface for json response
* Fixed errors based on PR #4 feedbacks
* Code refactor based on PR #4 feedbacks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
         "./customTypings/redux-thunk-fsa/index.d.ts",
         "./server/app.ts",
         "./server/constants.ts",
+        "./server/controllers/apiRouter.ts",
         "./server/messages.ts",
         "./server/models/db.ts",
         "./server/models/person.ts",
