Code refactor and Structure improvements.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
         "./customTypings/redux-thunk-fsa/index.d.ts",
         "./server/app.ts",
         "./server/constants.ts",
-        "./server/controllers/apiRouter.ts",
+        "./server/controllers/api.ts",
+        "./server/controllers/students.ts",
         "./server/messages.ts",
         "./server/models/db.ts",
         "./server/models/person.ts",
@@ -27,11 +28,13 @@
         "./server/tests/db/student.ts",
         "./server/tests/db/teacher.ts",
         "./server/tests/tests.ts",
+        "./server/utility/passport.ts",
         "./typings/globals/axios/index.d.ts",
         "./typings/globals/bluebird/index.d.ts",
         "./typings/globals/body-parser/index.d.ts",
         "./typings/globals/chai-as-promised/index.d.ts",
         "./typings/globals/chai/index.d.ts",
+        "./typings/globals/cors/index.d.ts",
         "./typings/globals/express-serve-static-core/index.d.ts",
         "./typings/globals/express/index.d.ts",
         "./typings/globals/history/index.d.ts",
