--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "0.12.0",
     "body-parser": "1.15.1",
     "bower": "1.7.9",
+    "cors": "2.7.1",
     "express": "4.13.4",
     "jquery": "2.2.4",
     "json-loader": "0.5.4",
