Added Mathquill dependency and writed typings for it.
Typings are not perfect, but they might just do enough for what we need.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "!./node_modules/**/*.ts"
     ],
     "files": [
+        "./customTypings/mathquill/index.d.ts",
         "./customTypings/redux-thunk-fsa/index.d.ts",
         "./server/app.ts",
         "./server/constants.ts",
