--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "redux": "3.5.2",
     "redux-actions": "0.10.0",
     "redux-thunk-fsa": "3.0.2",
+    "script-loader": "0.7.0",
     "sequelize": "3.23.3",
     "serve-static": "1.10.3",
     "ts-loader": "0.8.2",
