--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,14 @@
         "./server/app.ts",
         "./server/constants.ts",
         "./server/controllers/api.ts",
+        "./server/controllers/problems.ts",
         "./server/controllers/students.ts",
         "./server/messages.ts",
+        "./server/models/answer.ts",
         "./server/models/db.ts",
         "./server/models/person.ts",
+        "./server/models/problem.ts",
+        "./server/models/solution.ts",
         "./server/models/student.ts",
         "./server/models/teacher.ts",
         "./server/tests/db/person.ts",
