--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "2.2.4",
     "json-loader": "0.5.4",
     "jsonwebtoken": "7.0.1",
+    "lodash": "4.13.1",
     "node-fetch": "1.5.3",
     "passport": "0.3.2",
     "passport-jwt": "2.0.0",
