ImageAPI and GamifyEducation API now work together.
Done:
* If a problem is created, the ImageAPI will be called and problem image will be generated along with its solutions.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,7 @@
         "./typings/globals/cors/index.d.ts",
         "./typings/globals/express-serve-static-core/index.d.ts",
         "./typings/globals/express/index.d.ts",
+        "./typings/globals/form-data/index.d.ts",
         "./typings/globals/history/index.d.ts",
         "./typings/globals/jquery/index.d.ts",
         "./typings/globals/jsonwebtoken/index.d.ts",
@@ -61,6 +62,8 @@
         "./typings/globals/react/index.d.ts",
         "./typings/globals/redux-actions/index.d.ts",
         "./typings/globals/redux/index.d.ts",
+        "./typings/globals/request-promise/index.d.ts",
+        "./typings/globals/request/index.d.ts",
         "./typings/globals/sequelize-fixtures/index.d.ts",
         "./typings/globals/sequelize/index.d.ts",
         "./typings/globals/serve-static/index.d.ts",
