--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "redux": "3.5.2",
     "redux-actions": "0.10.0",
     "redux-thunk-fsa": "3.0.2",
+    "request-promise": "3.0.0",
     "script-loader": "0.7.0",
     "sequelize": "3.23.3",
     "serve-static": "1.10.3",
