Added answer router with support to get and add new answers.
When an answer is added, a new problem is automatically generated and returned to the user.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
         "./customTypings/redux-thunk-fsa/index.d.ts",
         "./server/app.ts",
         "./server/constants.ts",
+        "./server/controllers/answer.ts",
         "./server/controllers/api.ts",
         "./server/controllers/problems.ts",
         "./server/controllers/students.ts",
