Fixed min validator bug. Improved upsert function on simple router to create other modules.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
         "./server/constants.ts",
         "./server/controllers/answer.ts",
         "./server/controllers/api.ts",
+        "./server/controllers/person.ts",
         "./server/controllers/problems.ts",
         "./server/controllers/students.ts",
         "./server/controllers/teachers.ts",
