--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "json-loader": "0.5.4",
     "jsonwebtoken": "7.0.1",
     "lodash": "4.13.1",
+    "moment": "^2.15.0",
     "node-fetch": "1.5.3",
     "passport": "0.3.2",
     "passport-jwt": "2.0.0",
