Enable configuration for Hot Module Reloading

--- a/package.json
+++ b/package.json
@@ -1,73 +1,77 @@
 {
-  "name": "Gamify-Education",
-  "version": "0.0.1",
-  "description": "Thesis Project",
-  "main": "./www/app.js",
-  "scripts": {
-    "postinstall": "bower install && typings install && npm run build",
-    "start": "node ./www/app.js",
-    "start:watch": "concurrently \"npm run watch:client\" \"npm run watch:server\" \"npm run watch:build\"",
-    "build": "npm run build:client && npm run build:server",
-    "build:client": "webpack --colors --config webpack.config.client.production.js",
-    "watch:client": "webpack --colors --config webpack.config.client.dev.js --watch",
-    "build:server": "tsc ./server/app.ts --outDir ./www/",
-    "watch:server": "tsc ./server/app.ts --outDir ./www/ --watch",
-    "watch:build": "nodemon ./www/app.js",
-    "test": "npm run test:server",
-    "test:server": "./node_modules/tslint/bin/tslint ./server/**/*.ts && ./node_modules/mocha/bin/mocha ./www/tests/**/*.js"
-  },
-  "author": "Luis E. Rojas <lrojas94@gmail.com>, Manuel E. Urena, Frankie Garabito",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "0.12.0",
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-class-properties": "^6.11.5",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "body-parser": "1.15.1",
-    "bower": "1.7.9",
-    "cors": "2.7.1",
-    "express": "4.13.4",
-    "griddle-react": "^0.6.1",
-    "jquery": "2.2.4",
-    "json-loader": "0.5.4",
-    "jsonwebtoken": "7.0.1",
-    "lodash": "4.13.1",
-    "moment": "^2.15.0",
-    "node-fetch": "1.5.3",
-    "passport": "0.3.2",
-    "passport-jwt": "2.0.0",
-    "pg": "4.5.6",
-    "pg-hstore": "2.3.2",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
-    "react-redux": "4.4.5",
-    "react-router": "2.4.1",
-    "react-router-redux": "4.0.5",
-    "react-sidebar": "^2.2.1",
-    "redux": "3.5.2",
-    "redux-actions": "0.10.0",
-    "redux-logger": "^2.6.1",
-    "redux-thunk-fsa": "3.0.2",
-    "request-promise": "3.0.0",
-    "script-loader": "0.7.0",
-    "sequelize": "3.23.3",
-    "serve-static": "1.10.3",
-    "ts-loader": "0.8.2",
-    "typescript": "1.8.10",
-    "typings": "1.3.0",
-    "webpack": "1.13.1"
-  },
-  "devDependencies": {
-    "chai": "3.5.0",
-    "chai-as-promised": "5.3.0",
-    "concurrently": "2.1.0",
-    "gulp": "3.9.1",
-    "gulp-inject": "4.1.0",
-    "mocha": "2.5.3",
-    "nodemon": "1.9.2",
-    "tslint": "3.11.0"
-  }
+    "name": "Gamify-Education",
+    "version": "0.0.1",
+    "description": "Thesis Project",
+    "main": "./www/app.js",
+    "scripts": {
+        "postinstall": "bower install && typings install && npm run build",
+        "start": "node ./www/app.js",
+        "start:watch": "concurrently \"npm run watch:client\" \"npm run watch:server\" \"npm run watch:build\"",
+        "build": "npm run build:client && npm run build:server",
+        "build:client": "webpack -p --colors --config webpack.config.client.production.js",
+        "watch:client": "webpack-dev-server --hot --inline --config webpack.config.client.dev.js",
+        "build:server": "tsc ./server/app.ts --outDir ./www/",
+        "watch:server": "tsc ./server/app.ts --outDir ./www/ --watch",
+        "watch:build": "nodemon ./www/app.js",
+        "test": "npm run test:server",
+        "test:server": "./node_modules/tslint/bin/tslint ./server/**/*.ts && ./node_modules/mocha/bin/mocha ./www/tests/**/*.js",
+        "hot:client": "webpack-dev-server --hot --inline --config webpack.config.client.dev.js"
+    },
+    "author": "Luis E. Rojas <lrojas94@gmail.com>, Manuel E. Urena, Frankie Garabito",
+    "license": "ISC",
+    "dependencies": {
+        "axios": "0.12.0",
+        "body-parser": "1.15.1",
+        "bower": "1.7.9",
+        "cors": "2.7.1",
+        "express": "4.13.4",
+        "griddle-react": "^0.6.1",
+        "jquery": "2.2.4",
+        "json-loader": "0.5.4",
+        "jsonwebtoken": "7.0.1",
+        "lodash": "4.13.1",
+        "moment": "^2.15.0",
+        "node-fetch": "1.5.3",
+        "passport": "0.3.2",
+        "passport-jwt": "2.0.0",
+        "pg": "4.5.6",
+        "pg-hstore": "2.3.2",
+        "react": "^15.0.2",
+        "react-dom": "^15.0.2",
+        "react-redux": "4.4.5",
+        "react-router": "2.4.1",
+        "react-router-redux": "4.0.5",
+        "react-sidebar": "^2.2.1",
+        "redux": "3.5.2",
+        "redux-actions": "0.10.0",
+        "redux-logger": "^2.6.1",
+        "redux-thunk-fsa": "3.0.2",
+        "request-promise": "3.0.0",
+        "script-loader": "0.7.0",
+        "sequelize": "3.23.3",
+        "serve-static": "1.10.3",
+        "ts-loader": "0.8.2",
+        "typescript": "1.8.10",
+        "typings": "1.3.0"
+    },
+    "devDependencies": {
+        "babel-core": "^6.14.0",
+        "babel-loader": "^6.2.5",
+        "babel-plugin-transform-class-properties": "^6.11.5",
+        "babel-plugin-transform-object-rest-spread": "^6.8.0",
+        "babel-preset-es2015": "^6.14.0",
+        "babel-preset-react": "^6.11.1",
+        "chai": "3.5.0",
+        "chai-as-promised": "5.3.0",
+        "concurrently": "2.1.0",
+        "gulp": "3.9.1",
+        "gulp-inject": "4.1.0",
+        "html-webpack-plugin": "^2.22.0",
+        "mocha": "2.5.3",
+        "nodemon": "1.9.2",
+        "react-hot-loader": "^3.0.0-beta.4",
+        "tslint": "3.11.0",
+        "webpack": "1.13.1",
+        "webpack-dev-server": "^1.16.0"
+    }
 }
