--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "json-loader": "0.5.4",
     "jsonwebtoken": "7.0.1",
     "lodash": "4.13.1",
+    "mathquill": "git+https://github.com/luxp/mathquill-webpack.git",
     "moment": "^2.15.0",
     "node-fetch": "1.5.3",
     "passport": "0.3.2",
@@ -64,10 +65,13 @@
     "chai": "3.5.0",
     "chai-as-promised": "5.3.0",
     "concurrently": "2.1.0",
+    "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
     "gulp": "3.9.1",
     "gulp-inject": "4.1.0",
     "mocha": "2.5.3",
     "nodemon": "1.9.2",
+    "style-loader": "^0.13.1",
     "tslint": "3.11.0"
   }
 }
