--- a/GamifyGame/package.json
+++ b/GamifyGame/package.json
@@ -2,7 +2,7 @@
   "name": "PhaserES6Webpack",
   "version": "1.0.0",
   "description": "",
-  "author": "leandro cabrera <leandcabrera@gmail.com>",
+  "author": "Luis Rojas <lrojas94@gmail.com>",
   "main": "index.js",
   "scripts": {
     "dev": "webpack",
@@ -17,13 +17,16 @@
     "babel-preset-es2015": "^6.9.0",
     "browser-sync": "^2.13.0",
     "browser-sync-webpack-plugin": "^1.0.3",
+    "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
+    "phaser-input": "^1.2.5",
     "standard": "^7.1.2",
     "webfontloader": "^1.6.21",
     "webpack": "^1.13.1"
   },
   "dependencies": {
     "axios": "0.12.0",
-    "phaser": "^2.5.0"
+    "phaser": "^2.5.0",
+    "phaser-input": "^1.2.5"
   }
 }
