Fixed bug on multiforms

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,11 +23,13 @@
         "./server/constants.ts",
         "./server/controllers/answer.ts",
         "./server/controllers/api.ts",
+        "./server/controllers/difficulties.ts",
         "./server/controllers/person.ts",
         "./server/controllers/problems.ts",
         "./server/controllers/solutions.ts",
         "./server/controllers/students.ts",
         "./server/controllers/teachers.ts",
+        "./server/controllers/topics.ts",
         "./server/messages.ts",
         "./server/models/achievement.ts",
         "./server/models/answer.ts",
