Added School and Group Module. Working on having problems inscribed into a group automatically

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,10 @@
         "./server/controllers/answer.ts",
         "./server/controllers/api.ts",
         "./server/controllers/difficulties.ts",
+        "./server/controllers/groups.ts",
         "./server/controllers/person.ts",
         "./server/controllers/problems.ts",
+        "./server/controllers/schools.ts",
         "./server/controllers/solutions.ts",
         "./server/controllers/students.ts",
         "./server/controllers/teachers.ts",
