--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cors": "2.7.1",
     "express": "4.13.4",
     "griddle-react": "^0.6.1",
+    "immutable": "^3.8.1",
     "jquery": "2.2.4",
     "json-loader": "0.5.4",
     "jsonwebtoken": "7.0.1",
@@ -38,6 +39,7 @@
     "mathquill": "git+https://github.com/luxp/mathquill-webpack.git",
     "moment": "^2.15.0",
     "node-fetch": "1.5.3",
+    "observe": "^1.3.7",
     "passport": "0.3.2",
     "passport-jwt": "2.0.0",
     "pg": "4.5.6",
