--- a/.babelrc
+++ b/.babelrc
@@ -1,1 +1,9 @@
-{ "presets": ["react","es2015"] }
+{
+    "presets": ["react", "es2015"],
+    "plugins": [
+        ["react-intl", {
+            "messagesDir": "./client/build/messages",
+            "enforceDescription": false
+        }]
+    ]
+}
