--- a/package.json
+++ b/package.json
@@ -45,11 +45,12 @@
     "passport-jwt": "2.0.0",
     "pg": "4.5.6",
     "pg-hstore": "2.3.2",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0",
     "react-intl": "^2.1.5",
-    "react-redux": "4.4.5",
-    "react-router": "2.4.1",
+    "react-intl-redux": "^0.1.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
     "react-router-redux": "4.0.5",
     "react-sidebar": "^2.2.1",
     "redux": "3.5.2",
