--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-react": "^6.11.1",
     "body-parser": "1.15.1",
     "bower": "1.7.9",
+    "chart.js": "^1.1.1",
     "cors": "2.7.1",
     "express": "4.13.4",
     "griddle-react": "^0.6.1",
@@ -46,6 +47,8 @@
     "pg": "4.5.6",
     "pg-hstore": "2.3.2",
     "react": "^15.4.0",
+    "react-chartjs": "^0.8.0",
+    "react-chartjs-2": "^1.5.1",
     "react-dom": "^15.4.0",
     "react-intl": "^2.1.5",
     "react-intl-redux": "^0.1.0",
