--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "passport-jwt": "2.0.0",
     "pg": "4.5.6",
     "pg-hstore": "2.3.2",
+    "random-material-color": "^1.0.2",
     "react": "^15.4.0",
     "react-chartjs": "^0.8.0",
     "react-chartjs-2": "^1.5.1",
