--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-redux": "4.0.5",
+    "react-select": "^1.0.0-rc.2",
     "react-sidebar": "^2.2.1",
     "redux": "3.5.2",
     "redux-actions": "0.10.0",
